fixed issue where blog didn't display white spaces when presenting the article.

--- a/app/Blog/styles.css
+++ b/app/Blog/styles.css
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+.create-article__content {
+  white-space: pre-wrap;
+}
+
 .create-article__label {
   display: inline-block;
 }
