--- a/app/_components/Post/details/styles.css
+++ b/app/_components/Post/details/styles.css
@@ -2,6 +2,10 @@
   padding: 0 10px;
 }
 
+.post__content {
+  white-space: pre-wrap;
+}
+
 .post__title {
   font-size: 1.5625rem;
   padding: 10px;
